--- a/index.html
+++ b/index.html
@@ -3,30 +3,63 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Jaynjuicee Links</title>
+  <title>@jaynjuicee – Links</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="container">
-    <img src="assets/images/profile.jpg" alt="Jaynjuicee" class="profile-pic" />
-    <h1>@jaynjuicee</h1>
-    
+  <main class="wrapper">
+    <div class="brand">&thejuice.</div>
 
-    <a href="https://www.instagram.com/jaynjuicee/" class="link-button">
-      <img src="assets/images/instagram.png" alt="Instagram" /> Instagram
-    </a>
+    <h1 class="hero">I help traders grow <br />with real tools & real strategy.</h1>
 
-    <a href="https://x.com/Jayandthejuicee" class="link-button">
-      <img src="assets/images/twitter.png" alt="Twitter" /> Twitter
-    </a>
+    <div class="socials">
+      <a href="https://youtube.com/@yourchannel" class="pill">
+        <img src="youtube-icon.png" alt="YouTube" />
+        @jaynjuicee
+      </a>
+      <a href="https://x.com/Jayandthejuicee" class="pill">
+        <img src="twitter-icon.png" alt="Twitter" />
+        @jaynjuicee
+      </a>
+      <a href="https://instagram.com/jaynjuicee" class="pill">
+        <img src="instagram-icon.png" alt="Instagram" />
+        @jaynjuicee
+      </a>
+    </div>
 
-    <a href="https://yourdomain.com/ebook.pdf" class="link-button" target="_blank">
-      <img src="assets/images/ebook.png" alt="Ebook" /> Free Ebook
-    </a>
+    <div class="card-list">
+      <a href="https://drive.google.com/your-ebook" class="card">
+        <img src="ebook-icon.png" alt="" />
+        <div class="info">
+          <h3>Free Trading eBook</h3>
+          <p>Get the truth about what’s holding you back.</p>
+        </div>
+        <div class="arrow">↗</div>
+      </a>
 
-    <a href="https://ujaspxndh14.typeform.com/to/nfifIMr8" class="link-button" target="_blank">
-      <img src="assets/images/typeform.png" alt="Typeform" /> Feedback Form
-    </a>
-  </div>
+      <a href="https://sb289s.github.io/profitability-calculator/" class="card">
+        <img src="excel-icon.png" alt="" />
+        <div class="info">
+          <h3>Profitability Calculator</h3>
+          <p>Know your numbers. Know your edge.</p>
+        </div>
+        <div class="arrow">↗</div>
+      </a>
+
+      <a href="https://ujaspxndh14.typeform.com/to/nfifIMr8" class="card">
+        <img src="form-icon.png" alt="" />
+        <div class="info">
+          <h3>Apply Now</h3>
+          <p>Join the trading community built for growth.</p>
+        </div>
+        <div class="arrow">↗</div>
+      </a>
+    </div>
+
+    <footer>
+      <p>© 2025 jaynjuicee</p>
+    </footer>
+  </main>
 </body>
 </html>
